--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -1,4 +1,4 @@
-name: Build Windows EXE
+name: Build Windows EXE + Installer
 
 on:
   workflow_dispatch:
@@ -16,20 +16,36 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         shell: pwsh
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requisitos.txt
           pip install pyinstaller
 
-      - name: Build EXE
+      - name: Build CPF.exe
         shell: pwsh
         run: |
-          pyinstaller --noconfirm --onefile --name CPF --collect-all streamlit --collect-all scikit-learn --collect-all numpy --collect-all pandas launcher.py
+          pyinstaller --noconfirm --onefile --name CPF --collect-all streamlit --collect-all scikit-learn --collect-all numpy --collect-all pandas lanzador.py
 
-      - name: Upload artifact
+      - name: Install Inno Setup
+        shell: pwsh
+        run: |
+          choco install innosetup -y
+
+      - name: Build Installer (CPF-Instalador.exe)
+        shell: pwsh
+        run: |
+          iscc instalador.iss
+
+      - name: Upload CPF.exe
         uses: actions/upload-artifact@v4
         with:
           name: CPF-Windows-EXE
           path: dist/CPF.exe
+
+      - name: Upload Installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: CPF-Instalador
+          path: Output/CPF-Instalador.exe
