--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -17,26 +17,26 @@ jobs:
           python-version: "3.11"
 
       - name: Install Python dependencies
-        shell: pwsh
         run: |
           python -m pip install --upgrade pip
-          pip install -r requisitos.txt
+          pip install -r requirements.txt
           pip install pyinstaller
 
       - name: Build CPF.exe
-        shell: pwsh
-        run: |
-          pyinstaller --noconfirm --onefile --name CPF --collect-all streamlit --collect-all scikit-learn --collect-all numpy --collect-all pandas lanzador.py
+        run: >
+          pyinstaller --noconfirm --onefile --name CPF
+          --collect-all streamlit
+          --collect-all scikit-learn
+          --collect-all numpy
+          --collect-all pandas
+          launcher.py
 
       - name: Install Inno Setup
-        shell: pwsh
-        run: |
-          choco install innosetup -y
+        run: choco install innosetup -y
 
       - name: Build Installer (CPF-Instalador.exe)
-        shell: pwsh
         run: |
-          iscc instalador.iss
+          iscc installer.iss
 
       - name: Upload CPF.exe
         uses: actions/upload-artifact@v4
