--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -16,36 +15,28 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
 
-      - name: Build CPF.exe
-        run: >
-          pyinstaller --noconfirm --onefile --name CPF
-          --collect-all streamlit
-          --collect-all scikit-learn
-          --collect-all numpy
-          --collect-all pandas
-          launcher.py
-
-      - name: Install Inno Setup
-        run: choco install innosetup -y
-
-      - name: Build Installer (CPF-Instalador.exe)
+      - name: Build CPF.exe (PyInstaller)
         run: |
-          iscc installer.iss
+          pyinstaller --noconfirm --onefile --windowed --name CPF `
+            --collect-all streamlit `
+            --collect-all sklearn `
+            --collect-all numpy `
+            --collect-all pandas `
+            --add-data "app.py;." `
+            --add-data "auth.py;." `
+            --add-data "db.py;." `
+            --add-data "matching.py;." `
+            --add-data "services.py;." `
+            launcher.py
 
       - name: Upload CPF.exe
         uses: actions/upload-artifact@v4
         with:
           name: CPF-Windows-EXE
           path: dist/CPF.exe
-
-      - name: Upload Installer
-        uses: actions/upload-artifact@v4
-        with:
-          name: CPF-Instalador
-          path: Output/CPF-Instalador.exe
