--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -8,48 +8,35 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-        pip install pyinstaller
+      - name: Install dependencies
+        shell: cmd
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pyinstaller
 
-    - name: Build CPF.exe
-      run: |
-        pyinstaller --noconfirm --onefile --windowed ^
-          --name CPF ^
-          --collect-all streamlit ^
-          --collect-all numpy ^
-          --collect-all pandas ^
-          --collect-all scikit-learn ^
-          --add-data "app.py;." ^
-          --add-data "auth.py;." ^
-          --add-data "db.py;." ^
-          --add-data "services.py;." ^
-          --add-data "matching.py;." ^
-          launcher.py
+      - name: Build CPF.exe (PyInstaller)
+        shell: cmd
+        run: |
+          pyinstaller --noconfirm --onefile --windowed --name CPF ^
+            --add-data "app.py;." ^
+            --add-data "auth.py;." ^
+            --add-data "db.py;." ^
+            --add-data "services.py;." ^
+            --add-data "matching.py;." ^
+            --add-data "launcher.py;." ^
+            launcher.py
 
-    - name: Install Inno Setup
-      run: choco install innosetup -y
-
-    - name: Build Installer
-      run: iscc installer.iss
-
-    - name: Upload EXE
-      uses: actions/upload-artifact@v4
-      with:
-        name: CPF-Windows-EXE
-        path: dist/CPF.exe
-
-    - name: Upload Installer
-      uses: actions/upload-artifact@v4
-      with:
-        name: CPF-Instalador
-        path: Output/*.exe
+      - name: Upload EXE
+        uses: actions/upload-artifact@v4
+        with:
+          name: CPF-Windows-EXE
+          path: dist/CPF.exe
