--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -1,4 +1,4 @@
-name: Build Windows EXE + Installer
+name: Build Windows EXE
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Python
@@ -21,9 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyinstaller
+          pip install pyinstaller streamlit scikit-learn pandas numpy
 
-      - name: Build CPF.exe (PyInstaller)
+      - name: Build CPF.exe
         shell: cmd
         run: |
           pyinstaller --noconfirm --onefile --windowed --name CPF ^
@@ -32,7 +32,6 @@ jobs:
             --add-data "db.py;." ^
             --add-data "services.py;." ^
             --add-data "matching.py;." ^
-            --add-data "launcher.py;." ^
             launcher.py
 
       - name: Upload EXE
