--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -1,4 +1,4 @@
-name: Build Windows EXE + Installer
+name: Build Windows EXE
 
 on:
   workflow_dispatch:
@@ -17,28 +17,26 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        shell: cmd
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
 
-      - name: Build CPF.exe (PyInstaller)
-        shell: cmd
-        run: |
-          pyinstaller --noconfirm --onefile --windowed --name CPF ^
-            --collect-all streamlit ^
-            --collect-all sklearn ^
-            --collect-all numpy ^
-            --collect-all pandas ^
-            --add-data "app.py;." ^
-            --add-data "auth.py;." ^
-            --add-data "db.py;." ^
-            --add-data "services.py;." ^
-            --add-data "matching.py;." ^
-            launcher.py
+      - name: Build CPF.exe
+        run: >
+          pyinstaller --noconfirm --clean --onefile --windowed --name CPF
+          --collect-all streamlit
+          --collect-all numpy
+          --collect-all pandas
+          --collect-all scikit-learn
+          --add-data "app.py;."
+          --add-data "auth.py;."
+          --add-data "db.py;."
+          --add-data "services.py;."
+          --add-data "matching.py;."
+          launcher.py
 
-      - name: Upload CPF.exe
+      - name: Upload EXE
         uses: actions/upload-artifact@v4
         with:
           name: CPF-Windows-EXE
